--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,31 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Profiles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Title</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<section class="article">
+  <div class="page-title-container">
+      <h3 class="page-title">作品一覧</h3>
+      <a id="edit-btn" href="input.html">作品を投稿</a>
+  </div>
+  <div class="article-container">
     <% @profiles.each do |profile| %>
-      <tr>
-        <td><%= profile.user_id %></td>
-        <td><%= profile.title %></td>
-        <td><%= profile.image %></td>
-        <td><%= link_to 'Show', profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
-        <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="card">
+        <div class="card--top-image" style="background-image: url(<%= profile.image%>)";>
+            <%= image_tag("gaku.png",class: "gaku") %>
+        </div>
+        <div class="card--content">
+            <h3 class="card--content-title"><%=profile.title%></h3>
+            <%@name = User.find_by(id: profile.user_id).name%>
+            <p class="card--content-author"><%=@name%></p>
+        </div>
+        <a class="card--link" href="details.html"></a>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Profile', new_profile_path %>
+  </div>
+</section>
