profile一覧の修正

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -13,6 +13,47 @@
     height: 100%;
 }
 
+.page-title-container {
+    max-width: 114rem;
+    margin:0 auto;
+    margin-top:3rem;
+    margin-bottom: 3rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.page-title {
+    font-size: 2rem;
+
+}
+
+#edit-btn {
+    cursor: pointer;
+    font-weight: 700;
+    display: inline-block;
+    background-color: white;
+    color: #3e3e3e;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    border-radius: 100rem;
+    box-shadow: 0 .2rem 1rem rgba(0,0,0,0.3);
+    text-decoration: none;
+    transition: all .2s;
+
+    &:hover {
+        transform: translateY(-.3rem);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.3);
+    }
+
+    &:active {
+        transform: translateY(-.1rem);
+        box-shadow: 0 .3rem 1rem rgba(0,0,0,0.3);
+    }
+}
+
 .card {
     width: 100%;
     background-color: white;
