ログアウト機能の実装とか　色々

--- a/app/views/user/sign_in_page.html.erb
+++ b/app/views/user/sign_in_page.html.erb
@@ -3,8 +3,13 @@
         <p class="error-message">
             <%=@error%>
             <span class="close">×</span>
-        </p>
-        
+        </p>  
+    <%end%>
+    <%if @notice%>
+        <p class="success-message">
+            <%=@notice%>
+            <span class="close">×</span>
+        </p>  
     <%end%>
     <div class="login-form-container ">
         <div class="exp-container"></div>
