--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -36,6 +36,42 @@
 
     }
 }
+
+.success-message {
+    width: 100%;
+    height: 5rem;
+    font-size: 1.6rem;
+    color: white;
+    background-color: #00CECB;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+
+    transition: .2s;
+
+    transform-origin: top;
+
+    .close {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 5rem;
+        height: 5rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-size: 3rem;
+
+        cursor: pointer;
+
+    }
+}
 .login-page {
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(museum.jpg);
     background-size: cover;
