--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
     <div class="header--container">
         <%= image_tag('title.png',class: "logo") %>
         <ul class="gnav">
+            <%if (session[:id])%>
+              <li class="gnav--item">
+                <p class="gnav--item--link"><%= User.find_by(id: session[:id]).name%>さん</p>
+              </li>
+            <%end%>
             <li class="gnav--item">
               <%= link_to('展示一覧をみる','/profiles',class: "gnav--item--link")%>
             </li>
@@ -24,7 +29,7 @@
               </li>
             <%else%>
               <li class="gnav--item">
-                  <%= link_to('ログアウト','/sign_in',class: "gnav--item--link")%>
+                  <%= link_to('ログアウト','/sign_out',class: "gnav--item--link",method: :delete)%>
               </li>
             <%end%>
         </ul>
